force-app/main/default/objects/Ventana__c/Ventana__c.object-meta.xml
<CustomObject>
    <label>Ventana</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventanas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>