force-app/main/default/objects/Ventana__c/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <label>Cotizacion</label>
    <referenceTo>Cotizacion__c</referenceTo>
    <relationshipLabel>Ventanas</relationshipLabel>
    <relationshipName>Ventanas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>