force-app/main/default/objects/Ventana__c/fields/Ganancia__c.field-meta.xml
<CustomField>
    <fullName>Ganancia__c</fullName>
    <label>Ganancia</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>