force-app/main/default/objects/Ventana__c/fields/Mecanismo__c.field-meta.xml
<CustomField>
    <fullName>Mecanismo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mecanismo</label>
    <referenceTo>Mecanismo__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>