force-app/main/default/objects/Ventana__c/fields/PrecioFinal__c.field-meta.xml
<CustomField>
    <fullName>PrecioFinal__c</fullName>
    <label>Precio Final</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>