force-app/main/default/objects/Ventana__c/fields/Tela__c.field-meta.xml
<CustomField>
    <fullName>Tela__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tela</label>
    <referenceTo>Tela__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>